# haskell-code-spot

./: .gitignore  README.md  desgin-notes  eventlog-notes
client/: package.json  rollup.config.js
client/public/: all-codemirror-theme.css  index.html
client/src/: ActiveThreads.svelte  App.svelte  CodeMirror.svelte  CostCentreStack.svelte  CostCentreStackHeap.svelte  HeapAllocated.svelte  HeapLive.svelte  HeapSize.svelte  ModuleBrowser.svelte  RuntimeProfiling.svelte  SourceRangeBox.svelte  SourceView.svelte  ghc-srcloc.js  main.js  post-data.js
data/: grin.eventlog
server/: EventlogJSON.hs  FilterEvents.hs  Main.hs  SourceView.hs  code-spot-server.cabal  stack.yaml
server/Data/List/: Extra.hs
server/EndPoint/: EventLog.hs  ExtStg.hs  FileView.hs  SourceView.hs
