name:                code-spot-server
version:             0.1.0.0

license:             BSD3
license-file:        LICENSE
category:            Development
build-type:          Simple
cabal-version:       >=1.10


executable code-spot-server
  main-is:          Main.hs
  default-language: Haskell2010
  build-depends:    base
                  , scotty
                  , websockets
                  , warp
                  , wai
                  , text
                  , wai-websockets
