name:                code-spot-server
version:             0.1.0.0

license:             BSD3
license-file:        LICENSE
category:            Development
build-type:          Simple
cabal-version:       >=1.10

flag enable-ext-stg
    description:
        Adds support for GHC-WPC and external stg.

    default:     False
    manual:      True

executable code-spot-server
  main-is:          Main.hs
  other-modules:    EventlogJSON
                  , FilterEvents
                  , EndPoint.SourceView
                  , EndPoint.EventLog
                  , EndPoint.FileView
                  , Data.List.Extra

  default-language: Haskell2010
  build-depends:    base
                  , scotty
                  , websockets
                  , warp
                  , wai
                  , text
                  , wai-websockets
                  , wai-extra
                  , wai-cors
                  , ghc-events
                  , aeson
                  , bytestring
                  , base64-bytestring
                  , http-types

  if flag(enable-ext-stg)
    build-depends:  external-stg
    other-modules:  EndPoint.ExtStg
    cpp-options:    -DWITH_EXT_STG
